--- a/SRGAN.ipynb
+++ b/SRGAN.ipynb
@@ -17,6 +17,40 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "WTU4msXKlPnv",
+        "outputId": "9fb9ad66-157a-4d29-b0de-80f164a7807c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import os\n",
+        "from google.colab import drive\n",
+        "drive.mount('/drive')\n",
+        "os.symlink('/drive/My Drive', '/content/drive')\n",
+        "!ls -l /content/drive/"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /drive\n",
+            "total 33\n",
+            "drwx------ 2 root root  4096 Feb 24 06:12  AOD-Net\n",
+            "-rw------- 1 root root 16650 Feb 22 06:53  BertTest_willy.ipynb\n",
+            "drwx------ 2 root root  4096 Jan 30  2019 'Colab Notebooks'\n",
+            "drwx------ 2 root root  4096 Oct  6 08:07  SRGAN\n",
+            "drwx------ 2 root root  4096 Feb 24 06:21  train_image\n",
+            "-rw------- 1 root root   151 Jan 27 08:10  宥謙生理記事本.gsheet\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "GXKRpUah8_uF",
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -218,7 +252,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6ef52924-9510-4059-ac74-8f6a25c360db"
+        "outputId": "77ff9d60-9e11-4531-a6a5-d17be752a4cf"
       },
       "source": [
         "import sys\n",
@@ -229,18 +263,18 @@
         "%cd SRGAN_Test/\n",
         "!pwd  "
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Cloning into 'SRGAN_Test'...\n",
-            "remote: Enumerating objects: 3, done.\u001b[K\n",
-            "remote: Counting objects: 100% (3/3), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (3/3), done.\u001b[K\n",
-            "remote: Total 155 (delta 0), reused 0 (delta 0), pack-reused 152\u001b[K\n",
-            "Receiving objects: 100% (155/155), 84.45 KiB | 10.56 MiB/s, done.\n",
-            "Resolving deltas: 100% (80/80), done.\n",
+            "remote: Enumerating objects: 11, done.\u001b[K\n",
+            "remote: Counting objects: 100% (11/11), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (11/11), done.\u001b[K\n",
+            "remote: Total 163 (delta 4), reused 0 (delta 0), pack-reused 152\u001b[K\n",
+            "Receiving objects: 100% (163/163), 91.36 KiB | 359.00 KiB/s, done.\n",
+            "Resolving deltas: 100% (84/84), done.\n",
             "/content/SRGAN_Test\n",
             "/content/SRGAN_Test\n"
           ],
@@ -300,15 +334,15 @@
         "id": "eUyO2qBfc65g"
       },
       "source": [
-        "Path_drive_Base = \"/content/drive/MyDrive/SRGAN/\"\n",
-        "Path_data_Base = Path_drive_Base + \"data/\"\n",
+        "Path_drive_Base = \"/content/drive/SRGAN/\"\n",
+        "Path_data_Base = \"/content/drive/train_image/\"\n",
         "Path_dataInput_Base = \"/content/SRGAN_Test/data/\"\n",
         "# Path_data_Base = \"/content/SRGAN_Test/data/\"\n",
         "Path_snapshot = Path_drive_Base + \"snapshots/\"\n",
         "Gan_model = 'netG_epoch_8.pth' \n",
         "Dis_model = 'netD_epoch_8.pth'"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -319,7 +353,7 @@
       "source": [
         "!mkdir data"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -329,10 +363,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1f88d34a-f362-4372-d013-b5c29362f4d5"
+        "outputId": "c572163b-616f-4b70-984f-819104aa103f"
       },
       "source": [
-        "Sub_Train = \"01**\" #@param {type:\"string\"}\n",
+        "Sub_Train = \"02**\" #@param {type:\"string\"}\n",
         "Sub_Valid = \"080*\" #@param {type:\"string\"}\n",
         "Source_Train = Path_data_Base + \"DIV2K_train_HR/\" + Sub_Train + \".png\"\n",
         "Source_Valid = Path_data_Base + \"DIV2K_valid_HR/\" + Sub_Valid + \".png\"\n",
@@ -363,13 +397,15 @@
         "!mkdir $statisticsPath\n",
         "statisticsPath = statisticsPath + '/'"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "mkdir: cannot create directory ‘/content/drive/MyDrive/SRGAN/training_results/Train_01**_Valid_080*’: File exists\n",
-            "mkdir: cannot create directory ‘/content/drive/MyDrive/SRGAN/statistics/Train_01**_Valid_080*’: File exists\n"
+            "mkdir: cannot create directory ‘/content/SRGAN_Test/data/DIV2K_train_02**’: File exists\n",
+            "mkdir: cannot create directory ‘/content/SRGAN_Test/data/DIV2K_valid_080*’: File exists\n",
+            "mkdir: cannot create directory ‘/content/drive/SRGAN/training_results/Train_02**_Valid_080*’: File exists\n",
+            "mkdir: cannot create directory ‘/content/drive/SRGAN/statistics/Train_02**_Valid_080*’: File exists\n"
           ],
           "name": "stdout"
         }
@@ -384,7 +420,7 @@
         "!cp $Source_Train $Path_train\n",
         "!cp $Source_Valid $Path_valid"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -407,15 +443,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "ZC6CO2eeF0es",
-        "outputId": "5a13888c-9f19-4186-fa72-36115f8554cf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5a13888c-9f19-4186-fa72-36115f8554cf"
       },
       "source": [
         "!python -c \"import torch; print(torch.__version__)\""
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -441,15 +477,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "Gunmjw5QLaPS",
-        "outputId": "1cfbf0ff-7840-4085-91a3-7b0735ba0840",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1cfbf0ff-7840-4085-91a3-7b0735ba0840"
       },
       "source": [
         "!pip install torchvision==0.7"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -482,7 +518,7 @@
       "source": [
         "!pip install torch==1.6"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -539,11 +575,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "woCKFvAcAggI",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "2a827142-2455-4396-c635-2c20d7dadf96"
+        "id": "woCKFvAcAggI"
       },
       "source": [
         "    print('$Path_snapshot:')\n",
@@ -561,34 +593,17 @@
         "    print('$trainPath:')\n",
         "    print(trainPath)"
       ],
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "$Path_snapshot:\n",
-            "/content/drive/MyDrive/SRGAN/snapshots/\n",
-            "$Gan_model\n",
-            "netG_epoch_8.pth\n",
-            "$Dis_model\n",
-            "netD_epoch_8.pth\n",
-            "$Path_train\n",
-            "/content/SRGAN_Test/data/DIV2K_train_01**/\n",
-            "$Path_valid\n",
-            "/content/SRGAN_Test/data/DIV2K_valid_080*/\n",
-            "$statisticsPath:\n",
-            "/content/drive/MyDrive/SRGAN/statistics/Train_01**_Valid_080*/2021-02-23_06:55:27/\n",
-            "$trainPath:\n",
-            "/content/drive/MyDrive/SRGAN/training_results/Train_01**_Valid_080*/2021-02-23_06:55:27/\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "74_6uz0y32Aw"
+        "id": "74_6uz0y32Aw",
+        "outputId": "0a4732d0-ce44-45a9-bf0d-b17c3210b0c4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "! python train.py \\\n",
@@ -606,7 +621,31 @@
         "  --do_resize 1"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "$Path_snapshot:\n",
+            "/content/drive/SRGAN/snapshots/\n",
+            "$Gan_model\n",
+            "netG_epoch_8.pth\n",
+            "$Dis_model\n",
+            "netD_epoch_8.pth\n",
+            "$Path_train\n",
+            "/content/SRGAN_Test/data/DIV2K_train_02**/\n",
+            "$Path_valid\n",
+            "/content/SRGAN_Test/data/DIV2K_valid_080*/\n",
+            "$statisticsPath:\n",
+            "/content/drive/SRGAN/statistics/Train_02**_Valid_080*/2021-02-24_10:32:51/\n",
+            "$traininPath:\n",
+            "/content/drive/SRGAN/training_results/Train_02**_Valid_080*/2021-02-24_10:32:51/\n",
+            "Downloading: \"https://download.pytorch.org/models/vgg16-397923af.pth\" to /root/.cache/torch/hub/checkpoints/vgg16-397923af.pth\n",
+            "100% 528M/528M [00:03<00:00, 161MB/s]\n",
+            "  0% 0/100 [00:00<?, ?it/s]"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
